data to backend

--- a/model_layer.ipynb
+++ b/model_layer.ipynb
@@ -359,6 +359,7 @@
    "source": [
     "@app.route('/process_data', methods=['POST'])\n",
     "def process_data():\n",
+    "    # Data from Firebase\n",
     "    data = request.json\n",
     "    symbol = data['symbol']\n",
     "    data_length = data['data_length']\n",
@@ -391,13 +392,13 @@
     "        # Forecast\n",
     "        forecast_prices = trained_model.forecast(forecast_days = forecast_days)\n",
     "\n",
-    "    # Example: Data to send\n",
+    "    # Example: Data to send to Firebase\n",
     "    processed_data = {\n",
     "        'forecast_prices': forecast_prices,\n",
     "        'processed': True\n",
     "    }\n",
     "\n",
-    "    return jsonify(processed_data), 200"
+    "    return jsonify(processed_data), 200 "
    ]
   },
   {
