--- a/backend.ipynb
+++ b/backend.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -673,64 +673,53 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [31/Jul/2024 11:22:57] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:22:59] \"GET /request_email HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:23:02] \"POST /request_email HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [31/Jul/2024 11:26:10] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:26:15] \"GET /request_email HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:26:49] \"POST /request_email HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending temporary password to cimbom@gmail.com: ayczDXXU\n"
+      "Sending temporary password to cimbom@gmail.com: NqMMqS2J\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [31/Jul/2024 11:23:05] \"GET /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:23:05] \"GET /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:23:10] \"POST /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:23:11] \"GET /reset_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:23:11] \"GET /reset_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:24:06] \"POST /reset_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:24:08] \"GET /login HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:24:19] \"POST /login HTTP/1.1\" 500 -\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1498, in __call__\n",
-      "    return self.wsgi_app(environ, start_response)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1476, in wsgi_app\n",
-      "    response = self.handle_exception(e)\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1473, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 882, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 880, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 865, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\dogan.parlak\\AppData\\Local\\Temp\\ipykernel_384\\2958798633.py\", line 17, in login\n",
-      "    return jsonify({'message': 'Login successful!', 'redirect': url_for('main_page')}), 200\n",
-      "                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\helpers.py\", line 220, in url_for\n",
-      "    return current_app.url_for(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1084, in url_for\n",
-      "    return self.handle_url_build_error(error, endpoint, values)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\flask\\app.py\", line 1073, in url_for\n",
-      "    rv = url_adapter.build(  # type: ignore[union-attr]\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\dogan.parlak\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\werkzeug\\routing\\map.py\", line 924, in build\n",
-      "    raise BuildError(endpoint, values, method, self)\n",
-      "werkzeug.routing.exceptions.BuildError: Could not build url for endpoint 'main_page'. Did you mean 'index' instead?\n"
+      "127.0.0.1 - - [31/Jul/2024 11:26:51] \"GET /forgot_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:26:51] \"GET /forgot_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:30:55] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:32:07] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:32:19] \"POST /login HTTP/1.1\" 401 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:32:31] \"POST /login HTTP/1.1\" 401 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:32:35] \"GET /signup HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:32:59] \"GET /signup HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:33:03] \"GET /request_email HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:33:49] \"GET /request_email HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:05] \"POST /request_email HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending temporary password to cimbom@gmail.com: CJLeawLs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [31/Jul/2024 11:34:06] \"GET /forgot_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:07] \"GET /forgot_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:15] \"POST /forgot_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:16] \"GET /reset_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:16] \"GET /reset_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:45] \"POST /reset_password HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 11:34:47] \"GET /login HTTP/1.1\" 200 -\n"
      ]
     }
    ],
