main page design initiated

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
     "\n",
     "        if user and check_password_hash(user.password, password): # MAIN PAGE\n",
     "            # If user exists and password is correct, redirect to the main page\n",
-    "            return jsonify({'message': 'Login successful!', 'redirect': url_for('main_page')}), 200\n",
+    "            return jsonify({'message': 'Login successful!', 'redirect': url_for('main')}), 200\n",
     "        else:\n",
     "            # If credentials do not match, return an error\n",
     "            return jsonify({'message': 'Invalid credentials'}), 401\n"
@@ -368,13 +368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid_password(password):\n",
     "    \"\"\"Check if the password is valid based on the criteria.\"\"\"\n",
-    "    if len(password) < 8:\n",
+    "    if len(password) < 8: # Check password length\n",
     "        return False\n",
     "    if not re.search(r'[A-Z]', password):  # Check for uppercase letter\n",
     "        return False\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,18 +593,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.6 Predict"
+    "### 5.6 Main "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@app.route('/predict', methods=['GET', 'POST'])\n",
-    "def predict():\n",
+    "@app.route('/main', methods=['GET', 'POST'])\n",
+    "def main():\n",
     "    # Data fetching\n",
+    "    return render_template('main.html')\n",
     "    try:\n",
     "        data = request.json\n",
     "        symbol = data['symbol']\n",
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -673,53 +674,8 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [31/Jul/2024 11:26:10] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:26:15] \"GET /request_email HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:26:49] \"POST /request_email HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending temporary password to cimbom@gmail.com: NqMMqS2J\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [31/Jul/2024 11:26:51] \"GET /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:26:51] \"GET /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:30:55] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:32:07] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:32:19] \"POST /login HTTP/1.1\" 401 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:32:31] \"POST /login HTTP/1.1\" 401 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:32:35] \"GET /signup HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:32:59] \"GET /signup HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:33:03] \"GET /request_email HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:33:49] \"GET /request_email HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:05] \"POST /request_email HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sending temporary password to cimbom@gmail.com: CJLeawLs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [31/Jul/2024 11:34:06] \"GET /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:07] \"GET /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:15] \"POST /forgot_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:16] \"GET /reset_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:16] \"GET /reset_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:45] \"POST /reset_password HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [31/Jul/2024 11:34:47] \"GET /login HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [31/Jul/2024 13:54:26] \"POST /login HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [31/Jul/2024 13:54:26] \"GET /main HTTP/1.1\" 200 -\n"
      ]
     }
    ],
