comments added to main page

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -663,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_data(symbol, start_date, end_date):\n",
+    "def fetch_data(symbol, start_date, end_date): # fetch data based on user preference\n",
     "    data = None\n",
     "    try:\n",
     "        # Fetch historical price data\n",
@@ -681,7 +681,7 @@
     "\n",
     "    return data\n",
     "\n",
-    "def check_symbol_existence(symbol):\n",
+    "def check_symbol_existence(symbol): #check the existence of symbol from yahoo finance\n",
     "    try:\n",
     "        stock = yf.Ticker(symbol)\n",
     "        data = stock.history(period=\"1d\")\n",
@@ -698,7 +698,7 @@
    "outputs": [],
    "source": [
     "@app.route('/add_symbol', methods=['POST'])\n",
-    "def add_symbol():\n",
+    "def add_symbol(): # add symbol to the db\n",
     "    user_id = session.get('user_id')\n",
     "    if not user_id:\n",
     "        return jsonify({'success': False, 'message': 'User not logged in'}), 401\n",
@@ -729,7 +729,7 @@
    "outputs": [],
    "source": [
     "@app.route('/delete_symbol', methods=['POST'])\n",
-    "def delete_symbol():\n",
+    "def delete_symbol(): # delete symbol from the db\n",
     "    data = request.json\n",
     "    if not data or 'symbol' not in data:\n",
     "        return jsonify({'message': 'Invalid request'}), 400\n",
