comments added, some of the control print statements deleted

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -475,7 +475,7 @@
    "outputs": [],
    "source": [
     "@app.route('/login', methods=['GET', 'POST'])\n",
-    "def login():\n",
+    "def login(): # Login button in Login Page\n",
     "\n",
     "    if request.method == 'GET':\n",
     "        # Serve the signup and forgot password page\n",
@@ -509,9 +509,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_valid_password(password):\n",
+    "def is_valid_password(password, min_pass_len = 8): # Checks password validity based on predefined rules\n",
     "    \"\"\"Check if the password is valid based on the criteria.\"\"\"\n",
-    "    if len(password) < 8: # Check password length\n",
+    "    if len(password) < min_pass_len: # Check password length\n",
     "        return False\n",
     "    if not re.search(r'[A-Z]', password):  # Check for uppercase letter\n",
     "        return False\n",
@@ -529,7 +529,7 @@
    "outputs": [],
    "source": [
     "@app.route('/signup', methods=['GET', 'POST'])\n",
-    "def signup():\n",
+    "def signup(): # Signup button in Signup Page\n",
     "    if request.method == 'GET':\n",
     "        # Serve the signup page\n",
     "        return render_template('signup.html')\n",
@@ -543,7 +543,6 @@
     "        password = data.get('password')\n",
     "        password_re = data.get('password_re')\n",
     "        \n",
-    "        print('here')\n",
     "        # Check if all fields are present\n",
     "        if not email or not password or not password_re:\n",
     "            return jsonify({'message': 'All fields are required.'}), 400\n",
@@ -564,14 +563,11 @@
     "        # Create new user\n",
     "        hashed_password = generate_password_hash(password, method='pbkdf2:sha256')\n",
     "\n",
-    "        print('here2')\n",
     "        # Creating an empty list of symbols for the new user is implicit because we start with no symbols related to the user\n",
     "        new_user = User(email=email, password=hashed_password, account_type='basic')\n",
-    "        print('here3')\n",
     "        try:\n",
     "            db.session.add(new_user)\n",
     "            db.session.commit()\n",
-    "            print('here4')\n",
     "            return jsonify({'message': 'Sign-up successful!', 'redirect': url_for('login')}), 200\n",
     "        except Exception as e:\n",
     "            print(e)\n",
@@ -591,11 +587,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_temporary_password(length=8):\n",
+    "def generate_temporary_password(length=8): # Generate a temporary password to reset the password\n",
     "    letters_and_digits = string.ascii_letters + string.digits\n",
     "    return ''.join(random.choice(letters_and_digits) for i in range(length))\n",
     "\n",
-    "def send_email(email, temporary_password):\n",
+    "def send_email(email, temporary_password): # Sends an e-mail consisting of the temporary password to the regestired e-mail account \n",
     "    # Placeholder function to simulate sending an email\n",
     "    # Implement actual email sending logic here\n",
     "    print(f\"Sending temporary password to {email}: {temporary_password}\")"
@@ -608,7 +604,7 @@
    "outputs": [],
    "source": [
     "@app.route('/request_email', methods=['GET', 'POST'])\n",
-    "def request_email():\n",
+    "def request_email(): # Asks for the registed e-mail and then sends the temporary password to the registered e-mail account.\n",
     "    if request.method == 'POST':\n",
     "        data = request.get_json()\n",
     "        email = data.get('email')\n",
@@ -655,7 +651,7 @@
    "outputs": [],
    "source": [
     "@app.route('/forgot_password', methods=['GET', 'POST'])\n",
-    "def forgot_password():\n",
+    "def forgot_password(): # Checks the temporary password entered by the user whether it matches the sent one. If so proceed to reset password page\n",
     "    if request.method == 'POST':\n",
     "        data = request.get_json()\n",
     "        temp_password = data.get('tempPassword')\n",
@@ -691,7 +687,7 @@
    "outputs": [],
    "source": [
     "@app.route('/reset_password', methods=['GET', 'POST'])\n",
-    "def reset_password():\n",
+    "def reset_password(): # Set a new password for the account\n",
     "    if request.method == 'POST':\n",
     "        data = request.get_json()\n",
     "        new_password = data.get('newPassword')\n",
@@ -844,7 +840,7 @@
    "outputs": [],
    "source": [
     "@app.route('/add_symbol', methods=['POST'])\n",
-    "def add_symbol(): # add symbol to the db\n",
+    "def add_symbol(): # add symbol to the symbol database\n",
     "    user_id = session.get('user_id')\n",
     "    if not user_id:\n",
     "        return jsonify({'success': False, 'message': 'User not logged in'}), 401\n",
@@ -882,7 +878,7 @@
    "outputs": [],
    "source": [
     "@app.route('/delete_symbol', methods=['POST'])\n",
-    "def delete_symbol(): # delete symbol from the db\n",
+    "def delete_symbol(): # delete symbol from the symbol database\n",
     "    data = request.json\n",
     "    if not data or 'symbol' not in data:\n",
     "        return jsonify({'message': 'Invalid request'}), 400\n",
