unnecssary print statements are deleted

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -156,7 +156,6 @@
     "                        r2 = r2_score(val_split, predictions)\n",
     "                        r2_sum += r2\n",
     "                    except Exception as e:\n",
-    "                        #print(f\"Error for trend={trend}, lags={lags}: {e}\")\n",
     "                        continue\n",
     "                \n",
     "                # Average R2 score across folds\n",
@@ -184,11 +183,9 @@
     "        start = len(self.data)\n",
     "        end = start + forecast_days - 1\n",
     "        forecast_prices = self.trained_model.predict(start=start, end=end)\n",
-    "        print('Forecast prices achieved')\n",
     "       # Optional: Reverse log transformation if applied\n",
     "        if not self.stationary:\n",
     "            forecast_prices = np.exp(forecast_prices)\n",
-    "            print('Log transforation reversed')\n",
     "\n",
     "        # Plot the data\n",
     "        # Create date range for forecasted data\n",
@@ -844,7 +841,6 @@
     "        data_length = convert_to_days(data['data_length'])\n",
     "        forecast_days = convert_to_days(data['forecast_days'])\n",
     "        model_type = data['model_type']\n",
-    "        print(symbol, data_length, forecast_days, model_type)\n",
     "        #Set start and end date\n",
     "        now = datetime.now()\n",
     "        start_date =  (now - timedelta(days = data_length)).strftime(\"%Y-%m-%d\")\n",
@@ -852,9 +848,7 @@
     "\n",
     "        #Check if model already exists\n",
     "        model_obj = TrainedModels.load_trained_model(model_type=model_type, start_date=start_date, end_date=end_date, symbol=symbol)\n",
-    "        print(model_obj)\n",
     "        if not model_obj:  # if the model is already trained avoid re-training it.\n",
-    "            print('Model does not exist, creating a new one...')\n",
     "            data = fetch_data(symbol, start_date, end_date)\n",
     "            model_obj = create_model(model_type, data, symbol)\n",
     "            model_obj.train()\n",
@@ -862,12 +856,9 @@
     "            new_model = TrainedModels(symbol= symbol, model_type= model_type, start_date= start_date, end_date= end_date)\n",
     "            # Save the trained model to the database\n",
     "            new_model.save_trained_model(model_obj)\n",
-    "            print('Model saved to Trained Models table')\n",
     "            \n",
     "        # Forecast\n",
-    "        print('Forecasting...')\n",
     "        plot_data = model_obj.forecast(forecast_days=forecast_days)\n",
-    "        print('Forecast plot generated!')\n",
     "        return jsonify({'plot': plot_data}), 200\n",
     "\n",
     "    except KeyError as e:\n",
@@ -1099,7 +1090,8 @@
      "output_type": "stream",
      "text": [
       "127.0.0.1 - - [06/Aug/2024 17:19:20] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Aug/2024 17:19:23] \"GET /about_models HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [06/Aug/2024 17:19:23] \"GET /about_models HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Aug/2024 17:20:39] \"GET /my_profile HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -1107,11 +1099,6 @@
     "if __name__ == '__main__':\n",
     "    with app.app_context():\n",
     "        db.create_all()\n",
-    "        # Print all entries in the TrainedModels table\n",
-    "        models = TrainedModels.query.all()\n",
-    "        users = User.query.all()\n",
-    "        print(models)\n",
-    "        print(users)\n",
     "    app.run(debug=True, use_reloader=False)"
    ]
   }
