splitted the backed.impyb into module (.py files). updated the available models, their definitions and etc.

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -1091,96 +1091,7 @@
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:5000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [14/Aug/2024 16:10:46] \"GET /login HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:10:50] \"GET /signup HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:04] \"POST /signup HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:04] \"GET /login HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:12] \"POST /login HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:12] \"GET /forecaster HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:12] \"GET /get_symbols HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:25] \"POST /add_symbol HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:25] \"GET /get_symbols HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:29] \"POST /add_symbol HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:11:29] \"GET /get_symbols HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "Unable to infer frequency for the datetime index.\n",
-      "Series is not stationary. Applying log transformation...\n",
-      "Best R2 score: -11.4366\n",
-      "Best parameters: trend=ct, lags=25\n",
-      "Model training successful\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Aug/2024 16:11:49] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "Unable to infer frequency for the datetime index.\n",
-      "Series is not stationary. Applying log transformation...\n",
-      "Best R2 score: -0.0103\n",
-      "Best parameters: trend=n, lags=28\n",
-      "Model training successful\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Aug/2024 16:13:05] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "Unable to infer frequency for the datetime index.\n",
-      "Series is not stationary. Applying log transformation...\n",
-      "Best R2 score: 0.2883\n",
-      "Best parameters: trend=ct, lags=13\n",
-      "Model training successful\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Aug/2024 16:13:30] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:13:50] \"GET /about_models HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:03] \"GET /forecaster HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:03] \"GET /get_symbols HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:04] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:04] \"\u001b[36mGET /my_profile?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:04] \"\u001b[36mGET /my_profile?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:04] \"\u001b[36mGET /my_profile?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:27] \"\u001b[32mPOST /upgrade_to_premium HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:27] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:31] \"\u001b[32mPOST /downgrade_to_basic HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:31] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:32] \"\u001b[32mPOST /upgrade_to_premium HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:32] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:33] \"\u001b[32mPOST /downgrade_to_basic HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:33] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:34] \"\u001b[32mPOST /upgrade_to_premium HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:34] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:35] \"\u001b[32mPOST /downgrade_to_basic HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:35] \"GET /my_profile HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:49] \"\u001b[32mGET /logout HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [14/Aug/2024 16:14:49] \"GET /login HTTP/1.1\" 200 -\n"
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
      ]
     }
    ],
