about models page is updated.

--- a/backend.ipynb
+++ b/backend.ipynb
@@ -2050,7 +2050,7 @@
     "        trend = trial.suggest_categorical('trend', [True, False])\n",
     "        seasonal = trial.suggest_categorical('seasonal', [7, 12, 30, 52]) \n",
     "        cycle = trial.suggest_categorical('cycle', [True, False])  \n",
-    "        damped_trend = trial.suggest_categorical('damped_trend', [True, False]) \n",
+    "        damped_cycle = trial.suggest_categorical('damped_cycle', [True, False]) \n",
     "        irregular = trial.suggest_categorical('irregular', [True, False])  \n",
     "        autoregressive = trial.suggest_int('autoregressive', 1, 10)\n",
     "\n",
@@ -2069,7 +2069,7 @@
     "            train_split, val_split = self.data.iloc[train_index], self.data.iloc[val_index]\n",
     "            try:\n",
     "                model = UnobservedComponents(train_split, level = level, trend = trend, seasonal = seasonal, cycle = cycle, \n",
-    "                                             damped_trend = damped_trend, irregular = irregular, autoregressive = autoregressive).fit(disp = False)\n",
+    "                                             damped_cycle = damped_cycle, irregular = irregular, autoregressive = autoregressive).fit(disp = False)\n",
     "                predictions = model.get_forecast(steps=len(val_split)).predicted_mean\n",
     "                mse = mean_squared_error(val_split, predictions)\n",
     "                mse_sum += mse\n",
@@ -2125,7 +2125,7 @@
     "            # Fit the best model on the entire dataset\n",
     "            try:\n",
     "                self.trained_model =  UnobservedComponents(self.data, level = best_params['level'], trend = best_params['trend'], seasonal = best_params['seasonal'], \n",
-    "                                                           cycle = best_params['cycle'], damped_trend = best_params['damped_trend'], irregular = best_params['irregular'],\n",
+    "                                                           cycle = best_params['cycle'], damped_cycle = best_params['damped_cycle'], irregular = best_params['irregular'],\n",
     "                                                           autoregressive = best_params['autoregressive']).fit(disp = False)\n",
     "                print(f'Model training successful')\n",
     "            except Exception as e:\n",
